Fix: `TaskComments` alignment with navigation bar

--- a/src/modules/dashboard/components/Task/Task.css
+++ b/src/modules/dashboard/components/Task/Task.css
@@ -69,5 +69,5 @@
 .commentBox {
   flex: 0 0 auto;
   position: relative;
-  bottom: 43px;
+  bottom: 115px;
 }
